implement social icons in header

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="is--tetragon-locked" lang="en-US">
+<html lang="en-US">
 <head>
     <title>Tedra</title>
     <meta charset="utf-8" />
@@ -18,6 +18,35 @@
         <div class="header">
             <img class="header__logo" src="img/logo.png" alt="Tedra Logo" width="364" height="87">
         </div>
+        <div class="header__socials">
+            <a class="header__social" href="https://www.youtube.com/channel/UC6e5__fIRVQisZ4HfQc43fA" target="_blank" title="Tedra on YouTube">
+                <svg class="header__social-icon" viewBox="0 0 1024 1024">
+                    <path fill="currentColor" d="M977.92 277.504c-11.264-41.984-44.032-74.752-86.016-86.016-75.776-20.48-379.904-20.48-379.904-20.48s-304.128 0-379.904 20.48c-41.984 11.264-74.752 44.032-86.016 86.016-20.48 75.776-20.48 234.496-20.48 234.496s0 158.72 20.48 234.496c11.264 41.984 44.032 74.752 86.016 86.016 75.776 20.48 379.904 20.48 379.904 20.48s304.128 0 379.904-20.48c41.984-11.264 74.752-44.032 86.016-86.016 20.48-75.776 20.48-234.496 20.48-234.496s0-158.72-20.48-234.496zM414.72 657.408v-291.84l252.928 146.432-252.928 145.408z"></path>
+                </svg>
+            </a>
+            <a class="header__social" href="https://www.facebook.com/Tedraofficial" target="_blank" title="Tedra on Facebook">
+                <svg class="header__social-icon" viewBox="0 0 1024 1024">
+                    <path fill="currentColor" d="M584.704 1005.568h-136.192c-32.768 0-60.416-27.648-60.416-60.416v-367.616h-112.64c-32.768 0-60.416-27.648-60.416-60.416v-105.472c0-32.768 27.648-60.416 60.416-60.416h111.616v-95.232c0-141.312 93.184-236.544 232.448-236.544h103.424c32.768 0 60.416 27.648 60.416 60.416v124.928c0 32.768-27.648 60.416-60.416 60.416h-71.68c-2.048 0-4.096 0-5.12 0 0 2.048 0 3.072 0 4.096v81.92h102.4c18.432 0 35.84 8.192 47.104 22.528s16.384 32.768 12.288 50.176v0l-21.504 104.448c-5.12 27.648-30.72 48.128-59.392 48.128h-81.92v368.64c0 31.744-27.648 60.416-60.416 60.416zM275.456 407.552c-2.048 0-4.096 2.048-4.096 4.096v106.496c0 2.048 2.048 4.096 4.096 4.096h168.96v422.912c0 2.048 2.048 4.096 4.096 4.096h136.192c2.048 0 4.096-2.048 4.096-4.096v-424.96h138.24c2.048 0 4.096-1.024 4.096-2.048l21.504-105.472c0-2.048 0-3.072-1.024-4.096s-2.048-1.024-4.096-1.024h-157.696v-138.24c0-36.864 10.24-60.416 61.44-60.416h71.68c2.048 0 4.096-2.048 4.096-4.096v-125.952c0-2.048-2.048-4.096-4.096-4.096h-103.424c-106.496 0-176.128 70.656-176.128 180.224v151.552h-167.936z"></path>
+                </svg>
+            </a>
+            <a class="header__social" href="https://www.instagram.com/tedra.tech/" target="_blank" title="Tedra on Instagram">
+                <svg class="header__social-icon" viewBox="0 0 1024 1024">
+                    <path fill="currentColor" d="M512 275.456c-131.072 0-236.544 106.496-236.544 236.544s105.472 236.544 236.544 236.544c130.048 0 235.52-106.496 235.52-236.544s-105.472-236.544-235.52-236.544zM512 692.224c-99.328 0-180.224-80.896-180.224-180.224s80.896-180.224 180.224-180.224c99.328 0 179.2 80.896 179.2 180.224s-79.872 180.224-179.2 180.224zM787.456 166.912c-18.432 0-35.84 7.168-48.128 20.48-13.312 13.312-20.48 29.696-20.48 48.128s7.168 35.84 20.48 48.128c13.312 13.312 29.696 20.48 48.128 20.48s35.84-7.168 48.128-20.48c12.288-12.288 20.48-29.696 20.48-48.128v-1.024c0-17.408-8.192-34.816-20.48-47.104-10.24-14.336-29.696-20.48-48.128-20.48zM779.264 10.24h-534.528c-129.024 0-234.496 105.472-234.496 234.496v535.552c0 128 105.472 233.472 234.496 233.472h535.552c128 0 233.472-105.472 233.472-234.496v-534.528c0-129.024-105.472-234.496-234.496-234.496zM957.44 779.264c0 98.304-79.872 178.176-178.176 178.176h-534.528c-98.304 0-178.176-79.872-178.176-178.176v-534.528c0-98.304 79.872-178.176 178.176-178.176h535.552c98.304 0 178.176 79.872 178.176 178.176v534.528z"></path>
+                </svg>
+            </a>
+            <a class="header__social" href="https://soundcloud.com/tedraofficial" target="_blank" title="Tedra on SoundCloud">
+                <svg class="header__social-icon" viewBox="0 0 1024 1024">
+                    <path fill="currentColor" d="M971.776 556.032c0-53.248-19.456-103.424-55.296-141.312 0 0 0 0 0 0s0 0 0 0 0 0 0 0 0 0 0 0c-29.696-32.768-69.632-55.296-114.688-63.488-25.6-37.888-62.464-66.56-104.448-80.896 0 0 0 0-1.024 0 0 0 0 0-1.024 0-27.648-8.192-51.2-11.264-74.752-9.216-20.48 1.024-35.84 18.432-35.84 37.888v430.080c0 21.504 17.408 38.912 38.912 38.912h149.504c4.096 0 8.192-1.024 11.264-2.048 104.448-13.312 187.392-102.4 187.392-209.92zM763.904 707.584c-3.072 0-5.12 1.024-8.192 1.024h-114.688v-393.216c11.264 1.024 23.552 3.072 37.888 7.168 33.792 11.264 62.464 35.84 80.896 67.584l7.168 12.288 14.336 2.048c36.864 4.096 70.656 21.504 93.184 48.128 0 0 0 0 0 0s0 0 0 1.024c25.6 26.624 39.936 63.488 39.936 103.424 1.024 82.944-66.56 150.528-150.528 150.528zM425.984 293.888c-15.36 0-28.672 12.288-28.672 28.672v405.504c0 15.36 12.288 28.672 28.672 28.672s28.672-12.288 28.672-28.672v-405.504c0-15.36-12.288-28.672-28.672-28.672zM247.808 312.32c-15.36 0-28.672 12.288-28.672 28.672v370.688c0 15.36 12.288 28.672 28.672 28.672s28.672-12.288 28.672-28.672v-371.712c-1.024-15.36-13.312-27.648-28.672-27.648zM79.872 371.712c-15.36 0-28.672 12.288-28.672 28.672v250.88c0 15.36 12.288 28.672 28.672 28.672s28.672-12.288 28.672-28.672v-251.904c0-15.36-13.312-27.648-28.672-27.648z"></path>
+                </svg>
+            </a>
+        </div>
+        <a class="header__hamburger hamburger js-menu-trigger">
+            <div class="hamburger__container">
+                <div class="hamburger__line"></div>
+                <div class="hamburger__line"></div>
+                <div class="hamburger__line"></div>
+            </div>
+        </a>
 
         <div class="background__solid"></div>
         <canvas class="background" id="bg" style="display:block;"></canvas>
@@ -85,65 +114,27 @@
             </div>
         </div>
 
-        <div class="section" id="imprint">
+        <div class="section" id="soundcloud">
             <div class="section__inner">
-                <h3 class="section__title">Imprint.</h3>
-                <div class="section__content">
-                    <p>Libero scelerisque aptent commodo massa luctus platea dictum cursus tempus ad senectus id, eu nisl ut nec dictumst habitant curabitur sociis imperdiet bibendum. Malesuada vestibulum morbi leo amet tellus ultricies, justo praesent euismod felis duis, varius quam dapibus ut dignissim. Nunc felis cubilia parturient purus congue tempor sit fermentum dolor torquent velit risus praesent habitant fusce pellentesque, nisl penatibus vulputate vel consectetur dignissim bibendum natoque facilisi suspendisse netus litora habitasse aliquam. Magna conubia augue fermentum metus lorem, vitae placerat consectetur faucibus mi justo, eros tempor est imperdiet.</p>
+                <h3 class="section__title">Sound&shy;cloud.</h3>
+                <div class="section__content justify-center">
+                    <div class="soundcloud">
+                        <iframe class="soundcloud__iframe js-soundcloud-iframe" width="100%" height="400" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/976112734&color=%2328a896&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                        <p>
+                            <a href="#" class="link">Listen to Tedra on SoundCloud</a>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class="section" id="privacy">
             <div class="section__inner">
-                <h3 class="section__title">Privacy Policy.</h3>
+                <h3 class="section__title">Imprint / Privacy.</h3>
                 <div class="section__content">
-                    <p>Unsere Internetseite nutzt Formspree, einen Webdienst der Webseite https://formspree.io (nachfolgend "Formspree"). Um Ihnen die Funktionalität des Kontaktformulars zur Verfügung zu stellen, senden wir Ihre E-Mail-Adresse, Ihren Vornamen und Nachnamen an Formspree. Diese Daten werden dort verarbeitet, gespeichert und an die Energy & Light Technology Greiser GmbH per Mail an info@e-l-technology.de weitergegeben. Außerdem werden von Formspree unter anderem weitere Daten wie Ihre IP-Adresse, Ihr Typ des Browsers, die Domain der Webseite, das Datum und die Zeit des Zugriffs erhoben, um die gewünschte Funktionalität des Kontaktformulars bereitzustellen. Eine detaillierte Übersicht der erhobenen Daten finden Sie hier. Rechtsgrundlage für die Nutzung von Formspree ist Art. 6 Abs. 1 S. 1 lit. f DS-GVO (berechtigtes Interesse). In dem vorliegenden Fall werden personenbezogene Daten in die USA übertragen werden: Die Verarbeitung, Weitergabe und Speicherung der Daten ist von Formspree in dem folgenden Dokument zusammengefasst: Hier.</p>
+                    <p class="section__text">Diese Internetseite nutzt Formspree, einen Webdienst der Webseite https://formspree.io (nachfolgend "Formspree"). Um Ihnen die Funktionalität des Kontaktformulars zur Verfügung zu stellen, senden wir Ihre E-Mail-Adresse, Ihren Vornamen und Nachnamen an Formspree. Diese Daten werden dort verarbeitet, gespeichert und an Matthias Teifl per Mail an tedra-official@web.de weitergegeben. Außerdem werden von Formspree unter anderem weitere Daten wie Ihre IP-Adresse, Ihr Typ des Browsers, die Domain der Webseite, das Datum und die Zeit des Zugriffs erhoben, um die gewünschte Funktionalität des Kontaktformulars bereitzustellen. Eine detaillierte Übersicht der erhobenen Daten finden Sie <a href="https://formspree.io/legal/privacy-policy" target="_blank">hier</a>. Rechtsgrundlage für die Nutzung von Formspree ist Art. 6 Abs. 1 S. 1 lit. f DS-GVO (berechtigtes Interesse). In dem vorliegenden Fall werden personenbezogene Daten in die USA übertragen werden: Die Verarbeitung, Weitergabe und Speicherung der Daten ist von Formspree in dem folgenden Dokument zusammengefasst: <a href="https://formspree.io/legal/privacy-policy">Hier</a>.</p class="section__text">
+                    <p class="section__text">&copy; 2020 Tedra</p>
                 </div>
-            </div>
-        </div>
-
-        <div class="overlay"></div>
-    </div>
-
-    <div class="offcanvas-menu js-menu-target">
-        <div class="offcanvas-menu__trigger-container">
-            <a class="offcanvas-menu__trigger hamburger js-menu-trigger" href="#" aria-label="Open Menu">
-                <div class="hamburger__container">
-                    <div class="hamburger__line"></div>
-                    <div class="hamburger__line"></div>
-                    <div class="hamburger__line"></div>
-                </div>
-            </a>
-        </div>
-
-        <div class="offcanvas-menu__content">
-            <div class="justify-center">
-                <ul>
-                    <li class="list-item">
-                        <a class="list-item__link" target="_blank" href="https://www.youtube.com/channel/UC6e5__fIRVQisZ4HfQc43fA">YouTube</a>
-                    </li>
-                    <li class="list-item">
-                        <a class="list-item__link" target="_blank" href="https://www.facebook.com/Tedraofficial">Facebook</a>
-                    </li>
-                    <li class="list-item">
-                        <a class="list-item__link" target="_blank" href="https://www.instagram.com/tedra.tech/">Instagram</a>
-                    </li>
-                    <li class="list-item">
-                        <a class="list-item__link" target="_blank" href="https://soundcloud.com/tedraofficial">SoundCloud</a>
-                    </li>
-                    <li class="list-item">
-                        <a class="list-item__link" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="offcanvas-menu__footer">
-            <a class="offcanvas-menu__footer-link" href="#imprint">Imprint</a>
-            |
-            <a class="offcanvas-menu__footer-link" href="#privacy">Privacy Policy</a>
-            <div class="offcanvas-menu__subfooter">
-                &copy; 2019 Tedra
             </div>
         </div>
     </div>
