--- a/src/index.html
+++ b/src/index.html
@@ -116,7 +116,7 @@
 
         <div class="section" id="soundcloud">
             <div class="section__inner">
-                <h3 class="section__title">Sound&shy;cloud.</h3>
+                <h3 class="section__title">Tracks.</h3>
                 <div class="section__content justify-center">
                     <div class="soundcloud">
                         <iframe class="soundcloud__iframe js-soundcloud-iframe" width="100%" height="400" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/976112734&color=%2328a896&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
