add mailguard, move sections, replace logo with svg, fix #15

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="content-wrapper">
         <div class="header">
-            <img class="header__logo" src="img/logo.png" alt="Tedra Logo" width="364" height="87">
+            <img class="header__logo" src="img/logo.svg" alt="Tedra Logo" width="364" height="87">
         </div>
         <div class="header__socials">
             <a class="header__social" href="https://www.youtube.com/channel/UC6e5__fIRVQisZ4HfQc43fA" target="_blank" title="Tedra on YouTube">
@@ -58,6 +58,20 @@
                 <svg class="tetragon__surface tetragon__surface--front"><use xlink:href="#polygon"></use></svg>
                 <svg class="tetragon__surface tetragon__surface--left"><use xlink:href="#polygon"></use></svg>
                 <svg class="tetragon__surface tetragon__surface--right"><use xlink:href="#polygon"></use></svg>
+            </div>
+        </div>
+
+        <div class="section" id="soundcloud">
+            <div class="section__inner">
+                <h3 class="section__title">Tracks.</h3>
+                <div class="section__content justify-center">
+                    <div class="soundcloud">
+                        <iframe class="soundcloud__iframe js-soundcloud-iframe" width="100%" height="400" scrolling="no" frameborder="no" allow="autoplay" data-src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/976112734&color=%2328a896&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+                        <p>
+                            <a href="#" class="link">Listen to Tedra on SoundCloud</a>
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -115,25 +129,11 @@
             </div>
         </div>
 
-        <div class="section" id="soundcloud">
-            <div class="section__inner">
-                <h3 class="section__title">Tracks.</h3>
-                <div class="section__content justify-center">
-                    <div class="soundcloud">
-                        <iframe class="soundcloud__iframe js-soundcloud-iframe" loading="lazy" width="100%" height="400" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/976112734&color=%2328a896&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-                        <p>
-                            <a href="#" class="link">Listen to Tedra on SoundCloud</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <div class="section" id="privacy">
             <div class="section__inner">
                 <h3 class="section__title">Imprint / Privacy.</h3>
                 <div class="section__content">
-                    <p class="section__text">Diese Internetseite nutzt Formspree, einen Webdienst der Webseite https://formspree.io (nachfolgend "Formspree"). Um Ihnen die Funktionalität des Kontaktformulars zur Verfügung zu stellen, senden wir Ihre E-Mail-Adresse, Ihren Vornamen und Nachnamen an Formspree. Diese Daten werden dort verarbeitet, gespeichert und an Matthias Teifl per Mail an tedra-official@web.de weitergegeben. Außerdem werden von Formspree unter anderem weitere Daten wie Ihre IP-Adresse, Ihr Typ des Browsers, die Domain der Webseite, das Datum und die Zeit des Zugriffs erhoben, um die gewünschte Funktionalität des Kontaktformulars bereitzustellen. Eine detaillierte Übersicht der erhobenen Daten finden Sie <a href="https://formspree.io/legal/privacy-policy" target="_blank">hier</a>. Rechtsgrundlage für die Nutzung von Formspree ist Art. 6 Abs. 1 S. 1 lit. f DS-GVO (berechtigtes Interesse). In dem vorliegenden Fall werden personenbezogene Daten in die USA übertragen werden: Die Verarbeitung, Weitergabe und Speicherung der Daten ist von Formspree in dem folgenden Dokument zusammengefasst: <a href="https://formspree.io/legal/privacy-policy">Hier</a>.</p class="section__text">
+                    <p class="section__text">Diese Internetseite nutzt Formspree, einen Webdienst der Webseite https://formspree.io (nachfolgend "Formspree"). Um Ihnen die Funktionalität des Kontaktformulars zur Verfügung zu stellen, senden wir Ihre E-Mail-Adresse, Ihren Vornamen und Nachnamen an Formspree. Diese Daten werden dort verarbeitet, gespeichert und an Matthias Teifl per Mail an <span class="email-guard" data-mail="tedra-official" data-domain="web.de">@</span> weitergegeben. Außerdem werden von Formspree unter anderem weitere Daten wie Ihre IP-Adresse, Ihr Typ des Browsers, die Domain der Webseite, das Datum und die Zeit des Zugriffs erhoben, um die gewünschte Funktionalität des Kontaktformulars bereitzustellen. Eine detaillierte Übersicht der erhobenen Daten finden Sie <a href="https://formspree.io/legal/privacy-policy" target="_blank">hier</a>. Rechtsgrundlage für die Nutzung von Formspree ist Art. 6 Abs. 1 S. 1 lit. f DS-GVO (berechtigtes Interesse). In dem vorliegenden Fall werden personenbezogene Daten in die USA übertragen werden: Die Verarbeitung, Weitergabe und Speicherung der Daten ist von Formspree in dem folgenden Dokument zusammengefasst: <a href="https://formspree.io/legal/privacy-policy">Hier</a>.</p class="section__text">
                     <p class="section__text">&copy; 2020 Tedra</p>
                 </div>
             </div>
