fix #6 - add favicons

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="theme-color" content="#0a0b0e">
+    <meta name="msapplication-TileColor" content="#0a0b0e">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link type="text/css" rel="stylesheet" href="scss/index.scss" />
     <script type="text/javascript" src="ts/index.ts" async></script>
     <link type="preload" as="image" href="img/smiley.svg" />
