--- a/src/index.html
+++ b/src/index.html
@@ -74,13 +74,23 @@
     <div class="section" id="spotify">
         <div class="section__inner">
             <h3 class="section__title">Tracks.</h3>
-            <div class="section__content section__content--auto justify-center">
+            <div class="section__content section__content--wide justify-center">
                 <div class="spotify-grid">
-                    <iframe src="https://open.spotify.com/embed/track/5u9codkJd6iYBS37YfpXYs" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" lazy></iframe>
-                    <iframe src="https://open.spotify.com/embed/track/02c7grPUtzJgyud1nfJuor" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" lazy></iframe>
-                    <iframe src="https://open.spotify.com/embed/track/2vTfSv30ECUmpplpK4bXzm" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" lazy></iframe>
-                    <iframe src="https://open.spotify.com/embed/track/5stDfhZ4at9B94mZ7a082M" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" lazy></iframe>
-                    <iframe src="https://open.spotify.com/embed/track/4KCJSorIEyoUJrBk4UwgyO" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" lazy></iframe>
+                    <div class="spotify-grid__item">
+                        <iframe src="https://open.spotify.com/embed/track/5u9codkJd6iYBS37YfpXYs" frameborder="0" allowtransparency="true" allow="encrypted-media" lazy></iframe>
+                    </div>
+                    <div class="spotify-grid__item">
+                        <iframe src="https://open.spotify.com/embed/track/02c7grPUtzJgyud1nfJuor" frameborder="0" allowtransparency="true" allow="encrypted-media" lazy></iframe>
+                    </div>
+                    <div class="spotify-grid__item">
+                        <iframe src="https://open.spotify.com/embed/track/2vTfSv30ECUmpplpK4bXzm" frameborder="0" allowtransparency="true" allow="encrypted-media" lazy></iframe>
+                    </div>
+                    <div class="spotify-grid__item">
+                        <iframe src="https://open.spotify.com/embed/track/5stDfhZ4at9B94mZ7a082M" frameborder="0" allowtransparency="true" allow="encrypted-media" lazy></iframe>
+                    </div>
+                    <div class="spotify-grid__item">
+                        <iframe src="https://open.spotify.com/embed/track/4KCJSorIEyoUJrBk4UwgyO" frameborder="0" allowtransparency="true" allow="encrypted-media" lazy></iframe>
+                    </div>
                     <div class="spotify-grid__link">
                         <a href="#" class="link">Listen to Tedra on SoundCloud</a>
                     </div>
@@ -95,32 +105,29 @@
             <div class="section__content section__content--wide justify-center">
                 <div class="youtube-grid">
                     <div class="youtube-grid__item">
-                        <a href="https://www.youtube.com/watch?v=tF14gLaHcUo" class="youtube-poster js-iframe-poster" data-embed-url="https://www.youtube.com/embed/tF14gLaHcUo?autoplay=1">
+                        <a href="https://www.youtube.com/watch?v=tF14gLaHcUo" class="youtube-poster js-iframe-poster youtube-poster--big" data-embed-url="https://www.youtube.com/embed/tF14gLaHcUo?autoplay=1">
                             <img class="youtube-poster__image" src="https://i.ytimg.com/vi/tF14gLaHcUo/hqdefault.jpg" alt="TEDRA | Live at Oma Gertrud">
                             <div class="youtube-poster__title">TEDRA | Live at Oma Gertrud 2020</div>
-                            <svg class="youtube-poster__play-icon" viewBox="0 0 512 512">
-                                <path fill="currentColor" d="M217.9 199.8l93.8 51.3-93.8 50.5V199.8m-6.2-31.3c-3.6 0-7.3 1-10.6 2.9-6.4 3.8-10.2 10.5-10.2 17.9V312c0 7.4 3.8 14 10.1 17.8 3.3 2 7 3 10.7 3 3.4 0 6.7-.8 9.8-2.5l113.1-60.8c6.7-3.6 10.9-10.6 10.9-18.2s-4.1-14.6-10.8-18.3l-113.1-61.9c-3-1.7-6.5-2.6-9.9-2.6z"/>
-                                <path fill="currentColor" d="M256 89c2.3 0 102.9.7 168.6 5.5h.1c.8.1 1.7.2 2.6.3 9.2 1.1 24.7 2.8 38.6 17.5l.1.1.1.1c8.7 9.1 14 31.5 15.2 43.5.3 3.1 3.6 42.4 3.7 81v38.3c0 38-3.3 76.8-3.6 80.8-1.5 11.9-7 34.1-15.4 43.2l-.1.1-.1.1c-13.4 14.8-27.7 16.3-37.2 17.3-1.1.1-2.1.2-3.2.4h-.1c-66.2 4.8-167.7 5.5-168.6 5.5-5.4-.1-125.4-1.9-163.9-5.5h-.2c-1.8-.3-3.8-.5-6-.8h-.2c-11.7-1.3-27.6-3.2-40.2-16.9l-.2-.2-.2-.2c-8.7-9.2-13.9-31.2-15.2-42.9-.3-3.6-3.6-42.6-3.6-80.9V237c0-38.2 3.3-76.8 3.6-80.8 1.5-11.9 7-34.1 15.4-43.2l.1-.1.1-.1c13.8-15.2 28.4-16.9 38-18l.4-.1c.7-.1 1.4-.2 2-.2h.1C153.3 89.7 254.5 89 256 89m0-27c-1.1 0-103.3.7-171.6 5.6l-.9.1c-.7.1-1.5.2-2.4.3-11.1 1.3-34.2 3.9-54.9 26.7C9.2 113.1 4.3 149 3.8 153l-.1.5c-.1 1.7-3.7 42.6-3.7 83.6v38.3c0 41 3.6 81.8 3.8 83.5v.3c.4 4.1 4.7 40 22.5 58.7 19.4 21.2 43.9 24 57 25.5 2.1.2 3.9.4 5.1.7l1.2.2c39.1 3.7 161.6 5.6 166.8 5.6h.4c1 0 103.2-.7 170.9-5.6l.9-.1c.9-.1 1.8-.2 2.9-.3 11-1.2 34-3.6 54.4-26 17-18.4 21.9-54.3 22.4-58.3l.1-.5c.2-1.7 3.8-42.5 3.8-83.5v-38.3c0-41-3.6-81.8-3.8-83.5v-.2c-.4-4.1-4.8-40.8-22.6-59.4C465 71.9 441.7 69.3 430.5 68c-.9-.1-1.8-.2-2.5-.3l-.9-.1C359.3 62.7 257.1 62 256 62z"/>
+                            <svg class="youtube-poster__play-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+                                <path fill="currentColor" d="M62.7 16.6c-.7-2.8-2.9-4.9-5.7-5.7-5-1.3-25-1.3-25-1.3s-20 0-25 1.3c-2.8.7-4.9 2.9-5.7 5.7C0 21.6 0 32 0 32s0 10.4 1.3 15.4c.7 2.8 2.9 4.9 5.7 5.7 5 1.3 25 1.3 25 1.3s20 0 25-1.3c2.8-.7 4.9-2.9 5.7-5.7C64 42.4 64 32 64 32s0-10.4-1.3-15.4zm-37.1 25V22.4L42.2 32l-16.6 9.6z"/>
                             </svg>
                         </a>
                     </div>
                     <div class="youtube-grid__item">
                         <a href="https://www.youtube.com/watch?v=WSEdsHuO_RA" class="youtube-poster js-iframe-poster youtube-poster--small" data-embed-url="https://www.youtube.com/embed/WSEdsHuO_RA?autoplay=1">
-                            <img class="youtube-poster__image" src="https://i.ytimg.com/vi/WSEdsHuO_RA/hqdefault.jpg" alt="TEDRA | Live at Oma Gertrud">
+                            <img class="youtube-poster__image" src="https://i.ytimg.com/vi/WSEdsHuO_RA/hqdefault.jpg" alt="TEDRA | Live at Technokeller 2019">
                             <div class="youtube-poster__title">TEDRA | Live at Technokeller 2019</div>
-                            <svg class="youtube-poster__play-icon" viewBox="0 0 512 512">
-                                <path fill="currentColor" d="M217.9 199.8l93.8 51.3-93.8 50.5V199.8m-6.2-31.3c-3.6 0-7.3 1-10.6 2.9-6.4 3.8-10.2 10.5-10.2 17.9V312c0 7.4 3.8 14 10.1 17.8 3.3 2 7 3 10.7 3 3.4 0 6.7-.8 9.8-2.5l113.1-60.8c6.7-3.6 10.9-10.6 10.9-18.2s-4.1-14.6-10.8-18.3l-113.1-61.9c-3-1.7-6.5-2.6-9.9-2.6z"/>
-                                <path fill="currentColor" d="M256 89c2.3 0 102.9.7 168.6 5.5h.1c.8.1 1.7.2 2.6.3 9.2 1.1 24.7 2.8 38.6 17.5l.1.1.1.1c8.7 9.1 14 31.5 15.2 43.5.3 3.1 3.6 42.4 3.7 81v38.3c0 38-3.3 76.8-3.6 80.8-1.5 11.9-7 34.1-15.4 43.2l-.1.1-.1.1c-13.4 14.8-27.7 16.3-37.2 17.3-1.1.1-2.1.2-3.2.4h-.1c-66.2 4.8-167.7 5.5-168.6 5.5-5.4-.1-125.4-1.9-163.9-5.5h-.2c-1.8-.3-3.8-.5-6-.8h-.2c-11.7-1.3-27.6-3.2-40.2-16.9l-.2-.2-.2-.2c-8.7-9.2-13.9-31.2-15.2-42.9-.3-3.6-3.6-42.6-3.6-80.9V237c0-38.2 3.3-76.8 3.6-80.8 1.5-11.9 7-34.1 15.4-43.2l.1-.1.1-.1c13.8-15.2 28.4-16.9 38-18l.4-.1c.7-.1 1.4-.2 2-.2h.1C153.3 89.7 254.5 89 256 89m0-27c-1.1 0-103.3.7-171.6 5.6l-.9.1c-.7.1-1.5.2-2.4.3-11.1 1.3-34.2 3.9-54.9 26.7C9.2 113.1 4.3 149 3.8 153l-.1.5c-.1 1.7-3.7 42.6-3.7 83.6v38.3c0 41 3.6 81.8 3.8 83.5v.3c.4 4.1 4.7 40 22.5 58.7 19.4 21.2 43.9 24 57 25.5 2.1.2 3.9.4 5.1.7l1.2.2c39.1 3.7 161.6 5.6 166.8 5.6h.4c1 0 103.2-.7 170.9-5.6l.9-.1c.9-.1 1.8-.2 2.9-.3 11-1.2 34-3.6 54.4-26 17-18.4 21.9-54.3 22.4-58.3l.1-.5c.2-1.7 3.8-42.5 3.8-83.5v-38.3c0-41-3.6-81.8-3.8-83.5v-.2c-.4-4.1-4.8-40.8-22.6-59.4C465 71.9 441.7 69.3 430.5 68c-.9-.1-1.8-.2-2.5-.3l-.9-.1C359.3 62.7 257.1 62 256 62z"/>
+                            <svg class="youtube-poster__play-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+                                <path fill="currentColor" d="M62.7 16.6c-.7-2.8-2.9-4.9-5.7-5.7-5-1.3-25-1.3-25-1.3s-20 0-25 1.3c-2.8.7-4.9 2.9-5.7 5.7C0 21.6 0 32 0 32s0 10.4 1.3 15.4c.7 2.8 2.9 4.9 5.7 5.7 5 1.3 25 1.3 25 1.3s20 0 25-1.3c2.8-.7 4.9-2.9 5.7-5.7C64 42.4 64 32 64 32s0-10.4-1.3-15.4zm-37.1 25V22.4L42.2 32l-16.6 9.6z"/>
                             </svg>
                         </a>
                     </div>
                     <div class="youtube-grid__item">
                         <a href="https://www.youtube.com/watch?v=GoZI6wZkNqA" class="youtube-poster js-iframe-poster youtube-poster--small" data-embed-url="https://www.youtube.com/embed/GoZI6wZkNqA?autoplay=1">
-                            <img class="youtube-poster__image" src="https://i.ytimg.com/vi/GoZI6wZkNqA/hqdefault.jpg" alt="TEDRA | Live at Oma Gertrud">
-                            <div class="youtube-poster__title">DerTonmann pres. TEDRA | Live at Electronic Village 2018</div>
-                            <svg class="youtube-poster__play-icon" viewBox="0 0 512 512">
-                                <path fill="currentColor" d="M217.9 199.8l93.8 51.3-93.8 50.5V199.8m-6.2-31.3c-3.6 0-7.3 1-10.6 2.9-6.4 3.8-10.2 10.5-10.2 17.9V312c0 7.4 3.8 14 10.1 17.8 3.3 2 7 3 10.7 3 3.4 0 6.7-.8 9.8-2.5l113.1-60.8c6.7-3.6 10.9-10.6 10.9-18.2s-4.1-14.6-10.8-18.3l-113.1-61.9c-3-1.7-6.5-2.6-9.9-2.6z"/>
-                                <path fill="currentColor" d="M256 89c2.3 0 102.9.7 168.6 5.5h.1c.8.1 1.7.2 2.6.3 9.2 1.1 24.7 2.8 38.6 17.5l.1.1.1.1c8.7 9.1 14 31.5 15.2 43.5.3 3.1 3.6 42.4 3.7 81v38.3c0 38-3.3 76.8-3.6 80.8-1.5 11.9-7 34.1-15.4 43.2l-.1.1-.1.1c-13.4 14.8-27.7 16.3-37.2 17.3-1.1.1-2.1.2-3.2.4h-.1c-66.2 4.8-167.7 5.5-168.6 5.5-5.4-.1-125.4-1.9-163.9-5.5h-.2c-1.8-.3-3.8-.5-6-.8h-.2c-11.7-1.3-27.6-3.2-40.2-16.9l-.2-.2-.2-.2c-8.7-9.2-13.9-31.2-15.2-42.9-.3-3.6-3.6-42.6-3.6-80.9V237c0-38.2 3.3-76.8 3.6-80.8 1.5-11.9 7-34.1 15.4-43.2l.1-.1.1-.1c13.8-15.2 28.4-16.9 38-18l.4-.1c.7-.1 1.4-.2 2-.2h.1C153.3 89.7 254.5 89 256 89m0-27c-1.1 0-103.3.7-171.6 5.6l-.9.1c-.7.1-1.5.2-2.4.3-11.1 1.3-34.2 3.9-54.9 26.7C9.2 113.1 4.3 149 3.8 153l-.1.5c-.1 1.7-3.7 42.6-3.7 83.6v38.3c0 41 3.6 81.8 3.8 83.5v.3c.4 4.1 4.7 40 22.5 58.7 19.4 21.2 43.9 24 57 25.5 2.1.2 3.9.4 5.1.7l1.2.2c39.1 3.7 161.6 5.6 166.8 5.6h.4c1 0 103.2-.7 170.9-5.6l.9-.1c.9-.1 1.8-.2 2.9-.3 11-1.2 34-3.6 54.4-26 17-18.4 21.9-54.3 22.4-58.3l.1-.5c.2-1.7 3.8-42.5 3.8-83.5v-38.3c0-41-3.6-81.8-3.8-83.5v-.2c-.4-4.1-4.8-40.8-22.6-59.4C465 71.9 441.7 69.3 430.5 68c-.9-.1-1.8-.2-2.5-.3l-.9-.1C359.3 62.7 257.1 62 256 62z"/>
+                            <img class="youtube-poster__image" src="https://i.ytimg.com/vi/GoZI6wZkNqA/hqdefault.jpg" alt="TEDRA | Live at Electronic Village 2018">
+                            <div class="youtube-poster__title">TEDRA | Live at Electronic Village 2018</div>
+                            <svg class="youtube-poster__play-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+                                <path fill="currentColor" d="M62.7 16.6c-.7-2.8-2.9-4.9-5.7-5.7-5-1.3-25-1.3-25-1.3s-20 0-25 1.3c-2.8.7-4.9 2.9-5.7 5.7C0 21.6 0 32 0 32s0 10.4 1.3 15.4c.7 2.8 2.9 4.9 5.7 5.7 5 1.3 25 1.3 25 1.3s20 0 25-1.3c2.8-.7 4.9-2.9 5.7-5.7C64 42.4 64 32 64 32s0-10.4-1.3-15.4zm-37.1 25V22.4L42.2 32l-16.6 9.6z"/>
                             </svg>
                         </a>
                     </div>
