--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
                         <iframe src="https://open.spotify.com/embed/track/4KCJSorIEyoUJrBk4UwgyO" frameborder="0" allowtransparency="true" allow="encrypted-media" lazy></iframe>
                     </div>
                     <div class="spotify-grid__link">
-                        <a href="#" class="link">Listen to Tedra on SoundCloud</a>
+                        <a href="https://open.spotify.com/artist/32NGcZaWSqKmHby7x1qhXG" class="link">Listen to Tedra on Spotify</a>
                     </div>
                 </div>
             </div>
