--- a/src/index.html
+++ b/src/index.html
@@ -24,28 +24,28 @@
     </div>
 
     <div class="header__socials">
-        <a class="header__social" href="https://open.spotify.com/artist/32NGcZaWSqKmHby7x1qhXG" target="_blank" title="Tedra on Spotify">
+        <a class="header__social" href="https://open.spotify.com/sartist/32NGcZaWSqKmHby7x1qhXG" target="_blank" rel="noopener" title="Tedra on Spotify">
             <svg class="header__social-icon header__social-icon--spotify" viewBox="0 0 1317 1024">
                 <path fill="currentColor" d="M846 742a582 582 0 00-408-40 24 24 0 1011 47c125-34 257-19 376 37 3 1 6 3 11 3 10 0 18-5 21-13 6-14 1-29-11-34zm54-187a739 739 0 00-482-49 24 24 0 1012 46 697 697 0 01450 46c2 2 6 2 9 2 9 0 17-5 22-14 7-10 2-24-11-31zm58-195a860 860 0 00-557-61c-13 3-21 16-19 29 3 13 16 21 28 19a811 811 0 01526 58l10 1c10 0 18-4 23-14 5-11 0-26-11-32zM659 0a511 511 0 10-2 1023A511 511 0 00659 0zm0 976a464 464 0 110-929 464 464 0 010 929z"/>
             </svg>
         </a>
-        <a class="header__social" href="https://www.youtube.com/channel/UC6e5__fIRVQisZ4HfQc43fA" target="_blank" title="Tedra on YouTube">
+        <a class="header__social" href="https://www.youtube.com/channel/UC6e5__fIRVQisZ4HfQc43fA" target="_blank" rel="noopener" title="Tedra on YouTube">
             <svg class="header__social-icon header__social-icon--youtube" viewBox="0 0 512 512">
                 <path fill="currentColor" d="M217.9 199.8l93.8 51.3-93.8 50.5V199.8m-6.2-31.3c-3.6 0-7.3 1-10.6 2.9-6.4 3.8-10.2 10.5-10.2 17.9V312c0 7.4 3.8 14 10.1 17.8 3.3 2 7 3 10.7 3 3.4 0 6.7-.8 9.8-2.5l113.1-60.8c6.7-3.6 10.9-10.6 10.9-18.2s-4.1-14.6-10.8-18.3l-113.1-61.9c-3-1.7-6.5-2.6-9.9-2.6z"/>
                 <path fill="currentColor" d="M256 89c2.3 0 102.9.7 168.6 5.5h.1c.8.1 1.7.2 2.6.3 9.2 1.1 24.7 2.8 38.6 17.5l.1.1.1.1c8.7 9.1 14 31.5 15.2 43.5.3 3.1 3.6 42.4 3.7 81v38.3c0 38-3.3 76.8-3.6 80.8-1.5 11.9-7 34.1-15.4 43.2l-.1.1-.1.1c-13.4 14.8-27.7 16.3-37.2 17.3-1.1.1-2.1.2-3.2.4h-.1c-66.2 4.8-167.7 5.5-168.6 5.5-5.4-.1-125.4-1.9-163.9-5.5h-.2c-1.8-.3-3.8-.5-6-.8h-.2c-11.7-1.3-27.6-3.2-40.2-16.9l-.2-.2-.2-.2c-8.7-9.2-13.9-31.2-15.2-42.9-.3-3.6-3.6-42.6-3.6-80.9V237c0-38.2 3.3-76.8 3.6-80.8 1.5-11.9 7-34.1 15.4-43.2l.1-.1.1-.1c13.8-15.2 28.4-16.9 38-18l.4-.1c.7-.1 1.4-.2 2-.2h.1C153.3 89.7 254.5 89 256 89m0-27c-1.1 0-103.3.7-171.6 5.6l-.9.1c-.7.1-1.5.2-2.4.3-11.1 1.3-34.2 3.9-54.9 26.7C9.2 113.1 4.3 149 3.8 153l-.1.5c-.1 1.7-3.7 42.6-3.7 83.6v38.3c0 41 3.6 81.8 3.8 83.5v.3c.4 4.1 4.7 40 22.5 58.7 19.4 21.2 43.9 24 57 25.5 2.1.2 3.9.4 5.1.7l1.2.2c39.1 3.7 161.6 5.6 166.8 5.6h.4c1 0 103.2-.7 170.9-5.6l.9-.1c.9-.1 1.8-.2 2.9-.3 11-1.2 34-3.6 54.4-26 17-18.4 21.9-54.3 22.4-58.3l.1-.5c.2-1.7 3.8-42.5 3.8-83.5v-38.3c0-41-3.6-81.8-3.8-83.5v-.2c-.4-4.1-4.8-40.8-22.6-59.4C465 71.9 441.7 69.3 430.5 68c-.9-.1-1.8-.2-2.5-.3l-.9-.1C359.3 62.7 257.1 62 256 62z"/>
             </svg>
         </a>
-        <a class="header__social" href="https://www.facebook.com/Tedraofficial" target="_blank" title="Tedra on Facebook">
+        <a class="header__social" href="https://www.facebook.com/Tedraofficial" target="_blank" rel="noopener" title="Tedra on Facebook">
             <svg class="header__social-icon header__social-icon--facebook" viewBox="0 0 1024 1024">
                 <path fill="currentColor" d="M584.704 1005.568h-136.192c-32.768 0-60.416-27.648-60.416-60.416v-367.616h-112.64c-32.768 0-60.416-27.648-60.416-60.416v-105.472c0-32.768 27.648-60.416 60.416-60.416h111.616v-95.232c0-141.312 93.184-236.544 232.448-236.544h103.424c32.768 0 60.416 27.648 60.416 60.416v124.928c0 32.768-27.648 60.416-60.416 60.416h-71.68c-2.048 0-4.096 0-5.12 0 0 2.048 0 3.072 0 4.096v81.92h102.4c18.432 0 35.84 8.192 47.104 22.528s16.384 32.768 12.288 50.176v0l-21.504 104.448c-5.12 27.648-30.72 48.128-59.392 48.128h-81.92v368.64c0 31.744-27.648 60.416-60.416 60.416zM275.456 407.552c-2.048 0-4.096 2.048-4.096 4.096v106.496c0 2.048 2.048 4.096 4.096 4.096h168.96v422.912c0 2.048 2.048 4.096 4.096 4.096h136.192c2.048 0 4.096-2.048 4.096-4.096v-424.96h138.24c2.048 0 4.096-1.024 4.096-2.048l21.504-105.472c0-2.048 0-3.072-1.024-4.096s-2.048-1.024-4.096-1.024h-157.696v-138.24c0-36.864 10.24-60.416 61.44-60.416h71.68c2.048 0 4.096-2.048 4.096-4.096v-125.952c0-2.048-2.048-4.096-4.096-4.096h-103.424c-106.496 0-176.128 70.656-176.128 180.224v151.552h-167.936z"></path>
             </svg>
         </a>
-        <a class="header__social" href="https://www.instagram.com/tedra.tech/" target="_blank" title="Tedra on Instagram">
+        <a class="header__social" href="https://www.instagram.com/tedra.tech/" target="_blank" rel="noopener" title="Tedra on Instagram">
             <svg class="header__social-icon header__social-icon--instagram" viewBox="0 0 1024 1024">
                 <path fill="currentColor" d="M512 275.456c-131.072 0-236.544 106.496-236.544 236.544s105.472 236.544 236.544 236.544c130.048 0 235.52-106.496 235.52-236.544s-105.472-236.544-235.52-236.544zM512 692.224c-99.328 0-180.224-80.896-180.224-180.224s80.896-180.224 180.224-180.224c99.328 0 179.2 80.896 179.2 180.224s-79.872 180.224-179.2 180.224zM787.456 166.912c-18.432 0-35.84 7.168-48.128 20.48-13.312 13.312-20.48 29.696-20.48 48.128s7.168 35.84 20.48 48.128c13.312 13.312 29.696 20.48 48.128 20.48s35.84-7.168 48.128-20.48c12.288-12.288 20.48-29.696 20.48-48.128v-1.024c0-17.408-8.192-34.816-20.48-47.104-10.24-14.336-29.696-20.48-48.128-20.48zM779.264 10.24h-534.528c-129.024 0-234.496 105.472-234.496 234.496v535.552c0 128 105.472 233.472 234.496 233.472h535.552c128 0 233.472-105.472 233.472-234.496v-534.528c0-129.024-105.472-234.496-234.496-234.496zM957.44 779.264c0 98.304-79.872 178.176-178.176 178.176h-534.528c-98.304 0-178.176-79.872-178.176-178.176v-534.528c0-98.304 79.872-178.176 178.176-178.176h535.552c98.304 0 178.176 79.872 178.176 178.176v534.528z"></path>
             </svg>
         </a>
-        <a class="header__social" href="https://soundcloud.com/tedraofficial" target="_blank" title="Tedra on SoundCloud">
+        <a class="header__social" href="https://soundcloud.com/tedraofficial" target="_blank" rel="noopener" title="Tedra on SoundCloud">
             <svg class="header__social-icon header__social-icon--soundcloud" viewBox="0 0 1024 1024">
                 <path fill="currentColor" d="M971.776 556.032c0-53.248-19.456-103.424-55.296-141.312 0 0 0 0 0 0s0 0 0 0 0 0 0 0 0 0 0 0c-29.696-32.768-69.632-55.296-114.688-63.488-25.6-37.888-62.464-66.56-104.448-80.896 0 0 0 0-1.024 0 0 0 0 0-1.024 0-27.648-8.192-51.2-11.264-74.752-9.216-20.48 1.024-35.84 18.432-35.84 37.888v430.080c0 21.504 17.408 38.912 38.912 38.912h149.504c4.096 0 8.192-1.024 11.264-2.048 104.448-13.312 187.392-102.4 187.392-209.92zM763.904 707.584c-3.072 0-5.12 1.024-8.192 1.024h-114.688v-393.216c11.264 1.024 23.552 3.072 37.888 7.168 33.792 11.264 62.464 35.84 80.896 67.584l7.168 12.288 14.336 2.048c36.864 4.096 70.656 21.504 93.184 48.128 0 0 0 0 0 0s0 0 0 1.024c25.6 26.624 39.936 63.488 39.936 103.424 1.024 82.944-66.56 150.528-150.528 150.528zM425.984 293.888c-15.36 0-28.672 12.288-28.672 28.672v405.504c0 15.36 12.288 28.672 28.672 28.672s28.672-12.288 28.672-28.672v-405.504c0-15.36-12.288-28.672-28.672-28.672zM247.808 312.32c-15.36 0-28.672 12.288-28.672 28.672v370.688c0 15.36 12.288 28.672 28.672 28.672s28.672-12.288 28.672-28.672v-371.712c-1.024-15.36-13.312-27.648-28.672-27.648zM79.872 371.712c-15.36 0-28.672 12.288-28.672 28.672v250.88c0 15.36 12.288 28.672 28.672 28.672s28.672-12.288 28.672-28.672v-251.904c0-15.36-13.312-27.648-28.672-27.648z"></path>
             </svg>
@@ -77,19 +77,19 @@
             <div class="section__content section__content--wide justify-center">
                 <div class="spotify-grid">
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/5u9codkJd6iYBS37YfpXYs" frameborder="0" allowtransparency="true" allow="encrypted-media" lazy></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/5u9codkJd6iYBS37YfpXYs" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/02c7grPUtzJgyud1nfJuor" frameborder="0" allowtransparency="true" allow="encrypted-media" lazy></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/02c7grPUtzJgyud1nfJuor" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/2vTfSv30ECUmpplpK4bXzm" frameborder="0" allowtransparency="true" allow="encrypted-media" lazy></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/2vTfSv30ECUmpplpK4bXzm" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/5stDfhZ4at9B94mZ7a082M" frameborder="0" allowtransparency="true" allow="encrypted-media" lazy></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/5stDfhZ4at9B94mZ7a082M" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/4KCJSorIEyoUJrBk4UwgyO" frameborder="0" allowtransparency="true" allow="encrypted-media" lazy></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/4KCJSorIEyoUJrBk4UwgyO" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__link">
                         <a href="https://open.spotify.com/artist/32NGcZaWSqKmHby7x1qhXG" class="link">Listen to Tedra on Spotify</a>
@@ -106,7 +106,7 @@
                 <div class="youtube-grid">
                     <div class="youtube-grid__item">
                         <a href="https://www.youtube.com/watch?v=tF14gLaHcUo" class="youtube-poster js-iframe-poster youtube-poster--big" data-embed-url="https://www.youtube.com/embed/tF14gLaHcUo?autoplay=1">
-                            <img class="youtube-poster__image" src="https://i.ytimg.com/vi/tF14gLaHcUo/hqdefault.jpg" alt="TEDRA | Live at Oma Gertrud">
+                            <img class="youtube-poster__image" src="https://i.ytimg.com/vi/tF14gLaHcUo/hqdefault.jpg" alt="TEDRA | Live at Oma Gertrud" loading="lazy">
                             <div class="youtube-poster__title">TEDRA | Live at Oma Gertrud 2020</div>
                             <svg class="youtube-poster__play-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
                                 <path fill="currentColor" d="M62.7 16.6c-.7-2.8-2.9-4.9-5.7-5.7-5-1.3-25-1.3-25-1.3s-20 0-25 1.3c-2.8.7-4.9 2.9-5.7 5.7C0 21.6 0 32 0 32s0 10.4 1.3 15.4c.7 2.8 2.9 4.9 5.7 5.7 5 1.3 25 1.3 25 1.3s20 0 25-1.3c2.8-.7 4.9-2.9 5.7-5.7C64 42.4 64 32 64 32s0-10.4-1.3-15.4zm-37.1 25V22.4L42.2 32l-16.6 9.6z"/>
@@ -115,7 +115,7 @@
                     </div>
                     <div class="youtube-grid__item">
                         <a href="https://www.youtube.com/watch?v=WSEdsHuO_RA" class="youtube-poster js-iframe-poster youtube-poster--small" data-embed-url="https://www.youtube.com/embed/WSEdsHuO_RA?autoplay=1">
-                            <img class="youtube-poster__image" src="https://i.ytimg.com/vi/WSEdsHuO_RA/hqdefault.jpg" alt="TEDRA | Live at Technokeller 2019">
+                            <img class="youtube-poster__image" src="https://i.ytimg.com/vi/WSEdsHuO_RA/hqdefault.jpg" alt="TEDRA | Live at Technokeller 2019" loading="lazy">
                             <div class="youtube-poster__title">TEDRA | Live at Technokeller 2019</div>
                             <svg class="youtube-poster__play-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
                                 <path fill="currentColor" d="M62.7 16.6c-.7-2.8-2.9-4.9-5.7-5.7-5-1.3-25-1.3-25-1.3s-20 0-25 1.3c-2.8.7-4.9 2.9-5.7 5.7C0 21.6 0 32 0 32s0 10.4 1.3 15.4c.7 2.8 2.9 4.9 5.7 5.7 5 1.3 25 1.3 25 1.3s20 0 25-1.3c2.8-.7 4.9-2.9 5.7-5.7C64 42.4 64 32 64 32s0-10.4-1.3-15.4zm-37.1 25V22.4L42.2 32l-16.6 9.6z"/>
@@ -124,7 +124,7 @@
                     </div>
                     <div class="youtube-grid__item">
                         <a href="https://www.youtube.com/watch?v=GoZI6wZkNqA" class="youtube-poster js-iframe-poster youtube-poster--small" data-embed-url="https://www.youtube.com/embed/GoZI6wZkNqA?autoplay=1">
-                            <img class="youtube-poster__image" src="https://i.ytimg.com/vi/GoZI6wZkNqA/hqdefault.jpg" alt="TEDRA | Live at Electronic Village 2018">
+                            <img class="youtube-poster__image" src="https://i.ytimg.com/vi/GoZI6wZkNqA/hqdefault.jpg" alt="TEDRA | Live at Electronic Village 2018" loading="lazy">
                             <div class="youtube-poster__title">TEDRA | Live at Electronic Village 2018</div>
                             <svg class="youtube-poster__play-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
                                 <path fill="currentColor" d="M62.7 16.6c-.7-2.8-2.9-4.9-5.7-5.7-5-1.3-25-1.3-25-1.3s-20 0-25 1.3c-2.8.7-4.9 2.9-5.7 5.7C0 21.6 0 32 0 32s0 10.4 1.3 15.4c.7 2.8 2.9 4.9 5.7 5.7 5 1.3 25 1.3 25 1.3s20 0 25-1.3c2.8-.7 4.9-2.9 5.7-5.7C64 42.4 64 32 64 32s0-10.4-1.3-15.4zm-37.1 25V22.4L42.2 32l-16.6 9.6z"/>
@@ -194,7 +194,7 @@
         <div class="section__inner">
             <h3 class="section__title">Imprint / Privacy.</h3>
             <div class="section__content" lang="de-DE">
-                <p class="section__text">Diese Internetseite nutzt Formspree, einen Webdienst der Webseite https://formspree.io (nachfolgend "Formspree"). Um Ihnen die Funktionalität des Kontaktformulars zur Verfügung zu stellen, senden wir Ihre E-Mail-Adresse, Ihren Vornamen und Nachnamen an Formspree. Diese Daten werden dort verarbeitet, gespeichert und an Matthias Teifl per Mail an <span class="email-guard" data-mail="tedra-official" data-domain="web.de">@</span> weitergegeben. Außerdem werden von Formspree unter anderem weitere Daten wie Ihre IP-Adresse, Ihr Typ des Browsers, die Domain der Webseite, das Datum und die Zeit des Zugriffs erhoben, um die gewünschte Funktionalität des Kontaktformulars bereitzustellen. Eine detaillierte Übersicht der erhobenen Daten finden Sie <a href="https://formspree.io/legal/privacy-policy" target="_blank">hier</a>. Rechtsgrundlage für die Nutzung von Formspree ist Art. 6 Abs. 1 S. 1 lit. f DS-GVO (berechtigtes Interesse). In dem vorliegenden Fall werden personenbezogene Daten in die USA übertragen werden: Die Verarbeitung, Weitergabe und Speicherung der Daten ist von Formspree in dem folgenden Dokument zusammengefasst: <a href="https://formspree.io/legal/privacy-policy">Hier</a>.</p class="section__text">
+                <p class="section__text">Diese Internetseite nutzt Formspree, einen Webdienst der Webseite https://formspree.io (nachfolgend "Formspree"). Um Ihnen die Funktionalität des Kontaktformulars zur Verfügung zu stellen, senden wir Ihre E-Mail-Adresse, Ihren Vornamen und Nachnamen an Formspree. Diese Daten werden dort verarbeitet, gespeichert und an Matthias Teifl per Mail an <span class="email-guard" data-mail="tedra-official" data-domain="web.de">@</span> weitergegeben. Außerdem werden von Formspree unter anderem weitere Daten wie Ihre IP-Adresse, Ihr Typ des Browsers, die Domain der Webseite, das Datum und die Zeit des Zugriffs erhoben, um die gewünschte Funktionalität des Kontaktformulars bereitzustellen. Eine detaillierte Übersicht der erhobenen Daten finden Sie <a href="https://formspree.io/legal/privacy-policy" target="_blank" rel="noopener">hier</a>. Rechtsgrundlage für die Nutzung von Formspree ist Art. 6 Abs. 1 S. 1 lit. f DS-GVO (berechtigtes Interesse). In dem vorliegenden Fall werden personenbezogene Daten in die USA übertragen werden: Die Verarbeitung, Weitergabe und Speicherung der Daten ist von Formspree in dem folgenden Dokument zusammengefasst: <a href="https://formspree.io/legal/privacy-policy">Hier</a>.</p class="section__text">
                 <p class="section__text">&copy; 2020 Tedra</p>
             </div>
         </div>
