add new track 'tedra - the collision'

--- a/src/index.html
+++ b/src/index.html
@@ -93,6 +93,9 @@
                     <div class="spotify-grid__item">
                         <iframe src="https://open.spotify.com/embed/track/3XmWV6513jqPByVdTpcLTL" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
+                    <div class="spotify-grid__item">
+                        <iframe src="https://open.spotify.com/embed/track/2sEzBARoFnubA4t4QcYaIZ" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                    </div>
                     <div class="spotify-grid__link">
                         <a href="https://open.spotify.com/artist/32NGcZaWSqKmHby7x1qhXG" class="link">Listen to Tedra on Spotify</a>
                     </div>
