--- a/src/index.html
+++ b/src/index.html
@@ -76,25 +76,28 @@
             <div class="section__content section__content--wide justify-center">
                 <div class="spotify-grid">
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/5u9codkJd6iYBS37YfpXYs" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/5u9codkJd6iYBS37YfpXYs?theme=0" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/02c7grPUtzJgyud1nfJuor" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/02c7grPUtzJgyud1nfJuor?theme=0" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/2vTfSv30ECUmpplpK4bXzm" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/2vTfSv30ECUmpplpK4bXzm?theme=0" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/5stDfhZ4at9B94mZ7a082M" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/5stDfhZ4at9B94mZ7a082M?theme=0" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/4KCJSorIEyoUJrBk4UwgyO" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/4KCJSorIEyoUJrBk4UwgyO?theme=0" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/3XmWV6513jqPByVdTpcLTL" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/3XmWV6513jqPByVdTpcLTL?theme=0" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/2sEzBARoFnubA4t4QcYaIZ" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/2sEzBARoFnubA4t4QcYaIZ?theme=0" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                    </div>
+                    <div class="spotify-grid__item">
+                        <iframe src="https://open.spotify.com/embed/track/1Qk4kH9YTcwXVDJW2wE1Nb?theme=0" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__link">
                         <a href="https://open.spotify.com/artist/32NGcZaWSqKmHby7x1qhXG" class="link">Listen to Tedra on Spotify</a>
