--- a/src/index.html
+++ b/src/index.html
@@ -99,6 +99,9 @@
                     <div class="spotify-grid__item">
                         <iframe src="https://open.spotify.com/embed/track/1Qk4kH9YTcwXVDJW2wE1Nb?theme=0" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
+                    <div class="spotify-grid__item">
+                        <iframe src="https://open.spotify.com/embed/track/1rfhPMZPH0iuVR1eG4o3qu?theme=0" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                    </div>
                     <div class="spotify-grid__link">
                         <a href="https://open.spotify.com/artist/32NGcZaWSqKmHby7x1qhXG" class="link">Listen to Tedra on Spotify</a>
                     </div>
