Add meta-tags and schema.org

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <meta name="theme-color" content="#0a0b0e">
     <meta name="msapplication-TileColor" content="#0a0b0e">
     <meta name="description" content="Tedra - Techno. 132 bpm straight, deep, loud and hard.">
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="favicon/apple-touch-icon.png"/>
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -18,6 +20,27 @@
 </head>
 
 <body>
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "WebSite",
+            "sameAs": [
+                "https://open.spotify.com/artist/32NGcZaWSqKmHby7x1qhXG",
+                "https://www.youtube.com/channel/UC6e5__fIRVQisZ4HfQc43fA",
+                "https://www.facebook.com/Tedraofficial",
+                "https://www.instagram.com/tedra.tech",
+                "https://soundcloud.com/tedraofficial"
+            ]
+        }
+    </script>
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "logo": "favicon/apple-touch-icon.png"
+        }
+    </script>
+
     <div class="header">
         <img class="header__logo" src="img/logo.svg" alt="Tedra Logo" width="364" height="87">
     </div>
@@ -39,7 +62,7 @@
                 <path fill="currentColor" d="M584.704 1005.568h-136.192c-32.768 0-60.416-27.648-60.416-60.416v-367.616h-112.64c-32.768 0-60.416-27.648-60.416-60.416v-105.472c0-32.768 27.648-60.416 60.416-60.416h111.616v-95.232c0-141.312 93.184-236.544 232.448-236.544h103.424c32.768 0 60.416 27.648 60.416 60.416v124.928c0 32.768-27.648 60.416-60.416 60.416h-71.68c-2.048 0-4.096 0-5.12 0 0 2.048 0 3.072 0 4.096v81.92h102.4c18.432 0 35.84 8.192 47.104 22.528s16.384 32.768 12.288 50.176v0l-21.504 104.448c-5.12 27.648-30.72 48.128-59.392 48.128h-81.92v368.64c0 31.744-27.648 60.416-60.416 60.416zM275.456 407.552c-2.048 0-4.096 2.048-4.096 4.096v106.496c0 2.048 2.048 4.096 4.096 4.096h168.96v422.912c0 2.048 2.048 4.096 4.096 4.096h136.192c2.048 0 4.096-2.048 4.096-4.096v-424.96h138.24c2.048 0 4.096-1.024 4.096-2.048l21.504-105.472c0-2.048 0-3.072-1.024-4.096s-2.048-1.024-4.096-1.024h-157.696v-138.24c0-36.864 10.24-60.416 61.44-60.416h71.68c2.048 0 4.096-2.048 4.096-4.096v-125.952c0-2.048-2.048-4.096-4.096-4.096h-103.424c-106.496 0-176.128 70.656-176.128 180.224v151.552h-167.936z"></path>
             </svg>
         </a>
-        <a class="header__social" href="https://www.instagram.com/tedra.tech/" target="_blank" rel="noopener" title="Tedra on Instagram">
+        <a class="header__social" href="https://www.instagram.com/tedra.tech" target="_blank" rel="noopener" title="Tedra on Instagram">
             <svg class="header__social-icon header__social-icon--instagram" viewBox="0 0 1024 1024">
                 <path fill="currentColor" d="M512 275.456c-131.072 0-236.544 106.496-236.544 236.544s105.472 236.544 236.544 236.544c130.048 0 235.52-106.496 235.52-236.544s-105.472-236.544-235.52-236.544zM512 692.224c-99.328 0-180.224-80.896-180.224-180.224s80.896-180.224 180.224-180.224c99.328 0 179.2 80.896 179.2 180.224s-79.872 180.224-179.2 180.224zM787.456 166.912c-18.432 0-35.84 7.168-48.128 20.48-13.312 13.312-20.48 29.696-20.48 48.128s7.168 35.84 20.48 48.128c13.312 13.312 29.696 20.48 48.128 20.48s35.84-7.168 48.128-20.48c12.288-12.288 20.48-29.696 20.48-48.128v-1.024c0-17.408-8.192-34.816-20.48-47.104-10.24-14.336-29.696-20.48-48.128-20.48zM779.264 10.24h-534.528c-129.024 0-234.496 105.472-234.496 234.496v535.552c0 128 105.472 233.472 234.496 233.472h535.552c128 0 233.472-105.472 233.472-234.496v-534.528c0-129.024-105.472-234.496-234.496-234.496zM957.44 779.264c0 98.304-79.872 178.176-178.176 178.176h-534.528c-98.304 0-178.176-79.872-178.176-178.176v-534.528c0-98.304 79.872-178.176 178.176-178.176h535.552c98.304 0 178.176 79.872 178.176 178.176v534.528z"></path>
             </svg>
@@ -150,6 +173,9 @@
                                 <path fill="currentColor" d="M62.7 16.6c-.7-2.8-2.9-4.9-5.7-5.7-5-1.3-25-1.3-25-1.3s-20 0-25 1.3c-2.8.7-4.9 2.9-5.7 5.7C0 21.6 0 32 0 32s0 10.4 1.3 15.4c.7 2.8 2.9 4.9 5.7 5.7 5 1.3 25 1.3 25 1.3s20 0 25-1.3c2.8-.7 4.9-2.9 5.7-5.7C64 42.4 64 32 64 32s0-10.4-1.3-15.4zm-37.1 25V22.4L42.2 32l-16.6 9.6z"/>
                             </svg>
                         </a>
+                    </div>
+                    <div class="youtube-grid__link">
+                        <a href="https://www.youtube.com/channel/UC6e5__fIRVQisZ4HfQc43fA" class="link">Listen to Tedra on YouTube</a>
                     </div>
                 </div>
             </div>
