Add new track 'Devastation'

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
     <title>Tedra</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="theme-color" content="#0a0b0e">
-    <meta name="msapplication-TileColor" content="#0a0b0e">
-    <meta name="description" content="Tedra - Techno. 132 bpm straight, deep, loud and hard.">
-    <meta property="og:type" content="website"/>
-    <meta property="og:image" content="favicon/apple-touch-icon.png"/>
+    <meta name="theme-color" content="#0a0b0e" />
+    <meta name="msapplication-TileColor" content="#0a0b0e" />
+    <meta name="description" content="Tedra - Techno. 132 bpm straight, deep, loud and hard." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="favicon/apple-touch-icon.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/x-icon" href="favicon/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
@@ -16,7 +16,7 @@
     <link type="text/css" rel="stylesheet" href="scss/index.scss" />
     <script type="text/javascript" src="ts/index.ts" async></script>
     <link type="preload" as="image" href="img/smiley.svg" />
-    <link type="preload" as="font" href="font/lato/latolatin-thin-webfont.woff2" crossorigin type="font/woff2"/>
+    <link type="preload" as="font" href="font/lato/latolatin-thin-webfont.woff2" crossorigin type="font/woff2" />
 </head>
 
 <body>
@@ -99,35 +99,38 @@
             <div class="section__content section__content--wide justify-center">
                 <div class="spotify-grid">
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/5u9codkJd6iYBS37YfpXYs?theme=0" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/3TEeyzvq8W4lSzCwYBj6JS?theme=0" title="TEDRA - Devastation. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/02c7grPUtzJgyud1nfJuor?theme=0" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/3XmWV6513jqPByVdTpcLTL?theme=0" title="TEDRA - Timeshift. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/2vTfSv30ECUmpplpK4bXzm?theme=0" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/2sEzBARoFnubA4t4QcYaIZ?theme=0" title="TEDRA - The Collision. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/5stDfhZ4at9B94mZ7a082M?theme=0" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/5stDfhZ4at9B94mZ7a082M?theme=0" title="TEDRA - The Explorer. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/4KCJSorIEyoUJrBk4UwgyO?theme=0" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/4KCJSorIEyoUJrBk4UwgyO?theme=0" title="TEDRA - The Clock. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/3XmWV6513jqPByVdTpcLTL?theme=0" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/2vTfSv30ECUmpplpK4bXzm?theme=0" title="TEDRA - Lunar. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/2sEzBARoFnubA4t4QcYaIZ?theme=0" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/1Qk4kH9YTcwXVDJW2wE1Nb?theme=0" title="TEDRA - Supernova. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/1Qk4kH9YTcwXVDJW2wE1Nb?theme=0" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/5u9codkJd6iYBS37YfpXYs?theme=0" title="TEDRA - Anchor Mine. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
                     <div class="spotify-grid__item">
-                        <iframe src="https://open.spotify.com/embed/track/1rfhPMZPH0iuVR1eG4o3qu?theme=0" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
+                        <iframe src="https://open.spotify.com/embed/track/1rfhPMZPH0iuVR1eG4o3qu?theme=0" title="TEDRA - The Engine. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
-                    <div class="spotify-grid__link">
-                        <a href="https://open.spotify.com/artist/32NGcZaWSqKmHby7x1qhXG" class="link">Listen to Tedra on Spotify</a>
+                    <div class="spotify-grid__item">
+                        <iframe src="https://open.spotify.com/embed/track/02c7grPUtzJgyud1nfJuor?theme=0" title="TEDRA - Evolution. Listen on Spotify" frameborder="0" allowtransparency="true" allow="encrypted-media" loading="lazy"></iframe>
                     </div>
+                </div>
+                <div class="spotify-grid__link">
+                    <a href="https://open.spotify.com/artist/32NGcZaWSqKmHby7x1qhXG" class="link">Listen to Tedra on Spotify</a>
                 </div>
             </div>
         </div>
