Add 'About' section

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="theme-color" content="#0a0b0e" />
     <meta name="msapplication-TileColor" content="#0a0b0e" />
-    <meta name="description" content="Tedra - Techno. 132 bpm straight, deep, loud and hard." />
+    <meta name="description" content="TEDRA - Techno. 132 bpm straight, deep, loud and hard. Behind the name lurks the german music producer &quot;Matthias Teifl&quot;. Starting in 2018, his sound always covered a wider spectrum from peak-time techno to melodic and progressive tracks." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="favicon/apple-touch-icon.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
@@ -29,7 +29,8 @@
                 "https://www.youtube.com/channel/UC6e5__fIRVQisZ4HfQc43fA",
                 "https://www.facebook.com/Tedraofficial",
                 "https://www.instagram.com/tedra.tech",
-                "https://soundcloud.com/tedraofficial"
+                "https://soundcloud.com/tedraofficial",
+                "https://www.beatport.com/artist/tedra/863465"
             ]
         }
     </script>
@@ -239,11 +240,36 @@
         </div>
     </div>
 
-    <div class="section" id="privacy">
+    <div class="section section--collapsed" id="about">
+        <div class="section__inner">
+            <h3 class="section__title">The Artist.</h3>
+            <div class="section__content">
+                <p class="section__text">
+                    TEDRA - Techno. 132 bpm straight, deep, loud and hard.
+                </p>
+                <p class="section__text">
+                    Behind the name lurks the german music producer &quot;Matthias Teifl&quot;.
+                    Starting in 2018, his sound always covered a wider spectrum from peak-time techno to melodic and progressive tracks.
+                    Yet always staying unique in his musical style.
+                    Visit his <a href="https://open.spotify.com/artist/32NGcZaWSqKmHby7x1qhXG">Spotify artist-page</a> to discover all his productions.
+                </p>
+                <p class="section__text">
+                    Experiencing Tedra live is always about the thriving rhythm of techno beats. A must-see for every fan of electronic dance music who is looking for an energetic night out.
+                </p>
+                <p class="section__text">
+                    Follow <a href="https://www.instagram.com/tedra.tech">Tedra on Instagram</a> to stay up to date on performances and new releases.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="section section--collapsed" id="privacy">
         <div class="section__inner">
             <h3 class="section__title">Imprint / Privacy.</h3>
             <div class="section__content" lang="de-DE">
-                <p class="section__text">Diese Internetseite nutzt Formspree, einen Webdienst der Webseite https://formspree.io (nachfolgend "Formspree"). Um Ihnen die Funktionalität des Kontaktformulars zur Verfügung zu stellen, senden wir Ihre E-Mail-Adresse, Ihren Vornamen und Nachnamen an Formspree. Diese Daten werden dort verarbeitet, gespeichert und an Matthias Teifl per Mail an <span class="email-guard" data-mail="tedra-official" data-domain="web.de">@</span> weitergegeben. Außerdem werden von Formspree unter anderem weitere Daten wie Ihre IP-Adresse, Ihr Typ des Browsers, die Domain der Webseite, das Datum und die Zeit des Zugriffs erhoben, um die gewünschte Funktionalität des Kontaktformulars bereitzustellen. Eine detaillierte Übersicht der erhobenen Daten finden Sie <a href="https://formspree.io/legal/privacy-policy" target="_blank" rel="noopener">hier</a>. Rechtsgrundlage für die Nutzung von Formspree ist Art. 6 Abs. 1 S. 1 lit. f DS-GVO (berechtigtes Interesse). In dem vorliegenden Fall werden personenbezogene Daten in die USA übertragen werden: Die Verarbeitung, Weitergabe und Speicherung der Daten ist von Formspree in dem folgenden Dokument zusammengefasst: <a href="https://formspree.io/legal/privacy-policy">Hier</a>.</p class="section__text">
+                <p class="section__text">
+                    Diese Internetseite nutzt Formspree, einen Webdienst der Webseite https://formspree.io (nachfolgend "Formspree"). Um Ihnen die Funktionalität des Kontaktformulars zur Verfügung zu stellen, senden wir Ihre E-Mail-Adresse, Ihren Vornamen und Nachnamen an Formspree. Diese Daten werden dort verarbeitet, gespeichert und an Matthias Teifl per Mail an <span class="email-guard" data-mail="tedra-official" data-domain="web.de">@</span> weitergegeben. Außerdem werden von Formspree unter anderem weitere Daten wie Ihre IP-Adresse, Ihr Typ des Browsers, die Domain der Webseite, das Datum und die Zeit des Zugriffs erhoben, um die gewünschte Funktionalität des Kontaktformulars bereitzustellen. Eine detaillierte Übersicht der erhobenen Daten finden Sie <a href="https://formspree.io/legal/privacy-policy" target="_blank" rel="noopener">hier</a>. Rechtsgrundlage für die Nutzung von Formspree ist Art. 6 Abs. 1 S. 1 lit. f DS-GVO (berechtigtes Interesse). In dem vorliegenden Fall werden personenbezogene Daten in die USA übertragen werden: Die Verarbeitung, Weitergabe und Speicherung der Daten ist von Formspree in dem folgenden Dokument zusammengefasst: <a href="https://formspree.io/legal/privacy-policy">Hier</a>.
+                </p>
                 <p class="section__text">&copy; 2020 Tedra</p>
             </div>
         </div>
